; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/cxgbe/extr_t4_iov.c_t4iov_detach_child.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/cxgbe/extr_t4_iov.c_t4iov_detach_child.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.t4iov_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @t4iov_detach_child to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @t4iov_detach_child(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.t4iov_softc*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call %struct.t4iov_softc* @device_get_softc(i32 %5)
  store %struct.t4iov_softc* %6, %struct.t4iov_softc** %4, align 8
  %7 = load %struct.t4iov_softc*, %struct.t4iov_softc** %4, align 8
  %8 = getelementptr inbounds %struct.t4iov_softc, %struct.t4iov_softc* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %15

12:                                               ; preds = %1
  %13 = load %struct.t4iov_softc*, %struct.t4iov_softc** %4, align 8
  %14 = getelementptr inbounds %struct.t4iov_softc, %struct.t4iov_softc* %13, i32 0, i32 0
  store i32 0, i32* %14, align 4
  store i32 0, i32* %2, align 4
  br label %15

15:                                               ; preds = %12, %11
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local %struct.t4iov_softc* @device_get_softc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
